Update the java application